fix: spacing

--- a/src/assets/styles/base/index.css
+++ b/src/assets/styles/base/index.css
@@ -414,6 +414,16 @@ li {
       margin-bottom: 0;
     }
   }
+
+  &.reduced-spacing {
+    margin-top: 0;
+    margin-bottom: var(--sizing-3xl);
+    padding-left: 0;
+
+    & li:first-of-type {
+      margin-top: 0;
+    }
+  }
 }
 
 .link-list-header {
